# ackermann-gazebo-trial

./: .gitignore  README.md
docs/: architecture.md  baseline_pre_uplift_20260217_221631.json  benchmark_protocol.md  embedded_profile.md  results.md  results_semantic.md  semantic_rl_explorer_architecture.md
edge_vision_qos/: .gitignore  README.md  pytest.ini  requirements.txt
edge_vision_qos/app/: __init__.py  api.py  detector.py  pipeline.py  qos_monitor.py  run.py
edge_vision_qos/configs/: scenarios.json
edge_vision_qos/docs/: architecture.md  benchmark_protocol.md  results.md
edge_vision_qos/scripts/: benchmark.py  export_onnx.py  quantize_int8.py
edge_vision_qos/tests/: test_api.py  test_qos_monitor.py
experiments/: analyze_rl_failures.py  run_benchmark.sh  semantic_diag_monitor.py  summarize_benchmark.py  train_and_eval_rl.sh
fpga/hazard_score_vhdl/: README.md  hazard_score.vhd  tb_hazard_score.vhd
hybrid_nav_autonomy_bringup/: README.md  package.xml  setup.cfg  setup.py
hybrid_nav_autonomy_bringup/config/: nav2_frontier_stable.yaml  nav2_semantic_params.yaml
hybrid_nav_autonomy_bringup/config/bt/: ackermann_navigate_to_pose.xml
hybrid_nav_autonomy_bringup/hybrid_nav_autonomy_bringup/: scan_retimestamp_node.py  semantic_run_metrics_node.py
hybrid_nav_autonomy_bringup/launch/: frontier_stable.launch.py  semantic_autonomy.launch.py
hybrid_nav_autonomy_bringup/resource/: hybrid_nav_autonomy_bringup
hybrid_nav_autonomy_bringup/rviz/: semantic_explorer.rviz
hybrid_nav_autonomy_bringup/worlds/: house_explorer_world.sdf
hybrid_nav_bringup/: package.xml  setup.cfg  setup.py
hybrid_nav_bringup/hybrid_nav_bringup/: episode_manager_node.py
hybrid_nav_bringup/launch/: hybrid_nav_demo.launch.py
hybrid_nav_bringup/resource/: hybrid_nav_bringup
hybrid_nav_frontier_explorer/: package.xml  setup.cfg  setup.py
hybrid_nav_frontier_explorer/hybrid_nav_frontier_explorer/: exploration_manager_node.py  frontier_extractor_node.py  frontier_utils.py
hybrid_nav_frontier_explorer/resource/: hybrid_nav_frontier_explorer
hybrid_nav_frontier_explorer/test/: test_frontier_utils.py
hybrid_nav_metrics/: package.xml  setup.cfg  setup.py
hybrid_nav_metrics/hybrid_nav_metrics/: metrics_logger_node.py
hybrid_nav_metrics/resource/: hybrid_nav_metrics
hybrid_nav_rl_planner/: package.xml  setup.cfg  setup.py
hybrid_nav_rl_planner/config/: rl_policy.json
hybrid_nav_rl_planner/hybrid_nav_rl_planner/: dataset_collector_node.py  rl_planner_node.py  train_stub.py
hybrid_nav_rl_planner/resource/: hybrid_nav_rl_planner
hybrid_nav_rule_planner/: package.xml  setup.cfg  setup.py
hybrid_nav_rule_planner/hybrid_nav_rule_planner/: rule_planner_node.py
hybrid_nav_rule_planner/resource/: hybrid_nav_rule_planner
hybrid_nav_safety_layer/: package.xml  setup.cfg  setup.py
hybrid_nav_safety_layer/hybrid_nav_safety_layer/: safety_layer_node.py
hybrid_nav_safety_layer/resource/: hybrid_nav_safety_layer
hybrid_nav_semantic_perception/: package.xml  setup.cfg  setup.py
hybrid_nav_semantic_perception/hybrid_nav_semantic_perception/: detector_utils.py  map_utils.py  projection_utils.py  semantic_detector_node.py  semantic_map_node.py  semantic_projection_node.py
hybrid_nav_semantic_perception/resource/: hybrid_nav_semantic_perception
hybrid_nav_semantic_perception/test/: test_map_utils.py  test_projection_utils.py
hybrid_nav_semantic_rl/: package.xml  setup.cfg  setup.py
hybrid_nav_semantic_rl/hybrid_nav_semantic_rl/: scoring_utils.py  (+3 more)
predictive_maintenance_api/: .gitignore  README.md  requirements.txt
(+14 files in other folders)
