<?xml version="1.0"?>
<package format="3">
  <name>hybrid_nav_bringup</name>
  <version>0.0.1</version>
  <description>Bringup launch package for hybrid navigation MVP.</description>
  <maintainer email="you@example.com">bernard</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ackermann_bringup</exec_depend>
  <exec_depend>hybrid_nav_rule_planner</exec_depend>
  <exec_depend>hybrid_nav_rl_planner</exec_depend>
  <exec_depend>hybrid_nav_safety_layer</exec_depend>
  <exec_depend>hybrid_nav_metrics</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
