<?xml version="1.0"?>
<package format="3">
  <name>hybrid_nav_frontier_explorer</name>
  <version>0.0.1</version>
  <description>Frontier extraction and autonomous exploration manager nodes.</description>
  <maintainer email="you@example.com">bernard</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
